# luo-2

./: .gitignore  CMakeLists.txt  defs.h  inputcheckinfowidget.cpp  inputcheckinfowidget.hpp  inputcheckinfowidget.ui  logwidget.cpp  logwidget.hpp  logwidget.ui  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  medicalDetecter.aps  medicalDetecter.rc  modifycheckinfodialog.cpp  modifycheckinfodialog.hpp  modifycheckinfodialog.ui  myspliter.cpp  myspliter.hpp  networkmanager.cpp  networkmanager.hpp  patientmodel.cpp  patientmodel.hpp  qmlcommunicator.cpp  qmlcommunicator.hpp  resources.qrc  vipswrapper.cpp  vipswrapper.hpp  webviewwidget.cpp  webviewwidget.hpp
CoreFunctionality/: checkbackgroundandmove.cpp  checkbackgroundandmove.hpp  cutpyramid.cpp  cutpyramid.hpp  medicaldetector.cpp  medicaldetector.hpp
DataManager/: CMakeLists.txt  datamanager.cpp  datamanager.h  libqsql.cpp  libqsql.h  mprinter.cpp  mprinter.h  progresscontroller.cpp  progresscontroller.hpp
qml/: AboutWidget.qml  AddPatientPage.qml  CustomTreeView.qml  FancyButton.qml  LoginWindow.qml  PatientInfo.qml  SelectionWindow.qml  registerWidget.qml
resources/config/: config.json
resources/html/postHtml/: Newtest.html  Newtest.html.bak  test.html  test.html.bak
resources/html/preHtml/: Newtest.html  Newtest.html.bak  test.html
test/: CMakeLists.txt  main.cpp  maintest.cpp  maintest.hpp  testnetworkmanager.cpp  testnetworkmanager.hpp
